# cv-tailor

./: .env.example  .gitignore  LICENSE  README.md  answers.example.yaml  profile.yaml  pyproject.toml  pytest.ini  requirements.txt  sources.yaml
docs/plans/: 2026-05-26-cv-tailor.md  2026-06-17-cv-tailor-discovery.md  2026-06-17-cv-tailor-phase2.md
docs/specs/: 2026-05-26-cv-tailor-design.md  2026-06-17-cv-tailor-discovery-design.md
scripts/: apply_approved.py  assemble.py  autopilot.py  crm_add.py  crm_setup.py  process_approved.py  run_scan.sh  run_weekly_scan.sh  scan.py  tailor.py  weekly_scan.py
src/cv_tailor/: answers.py  budget.py  (+23 more)
src/cv_tailor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: cv.css  cv.html.j2
tests/: conftest.py  test_answers.py  test_apply_approved.py  test_apply_approved_autopilot.py  test_apply_detect.py  test_assemble_lib.py  test_ats_check.py  test_ats_resolve.py  test_autopilot.py  test_autopilot_cli.py  test_budget.py  test_cache.py  test_cover_llm.py  test_crm_add.py  test_e2e_tailor.py  test_enrich.py  test_enrich_hunter.py  test_gates.py  test_integration_smoke.py  test_job_sources.py  test_job_sources_v2.py  test_match.py  test_no_real_answers_leak.py  test_portal_ashby.py  test_portal_base.py  test_portal_greenhouse.py  test_portal_lever.py  test_portal_micro1.py  test_profile.py  test_render.py  test_scan_funnel.py  test_scout_queue.py  test_scout_queue_status_stamp.py  test_screening.py  test_security_hardening.py  test_sender.py  test_serpapi.py  test_sheets.py  test_slug.py  test_tailor_llm.py  (+2 more)
(+24 files in other folders)
